# acairo

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
include/: acairo.h  acairo.hpp  cairo.h  common.hpp  executor.hpp  future.hpp  promise.hpp  scheduler.hpp  task.hpp  tcplistener.hpp  tcpstream.hpp
src/: acairo.cpp  amain.cpp  cairo.cpp  common.cpp  executor.cpp  main.cpp  scheduler.cpp  task.cpp  tcplistener.cpp  tcpstream.cpp
tests/perf/: go.mod  main.go
